--- a/index.html
+++ b/index.html
@@ -3,10 +3,118 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Beauty salon</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="./index.html"><img src="./images/logo.svg" alt="Beauty Salon Logo" /></a>
+            <ul>
+                <li><a href="#about-us-section">Про нас</a></li>
+                <li><a href="#why-us-section">Чому ми</a></li>
+                <li><a href="#services-section">Наші процедури</a></li>
+                <li><a href="#contacts-section">Контакти</a></li>
+            </ul>
+        </nav>
+        <a href="#"><img src="./images/phone-logo.svg" alt="Phone icon" /></a>
+        <a href="#"><img src="./images/facebook-logo.svg" alt="Facebook icon" /></a>
+        <a href="#"><img src="./images/instagram-logo.svg" alt="Instagram icon" /></a>
+    </header>
+
+    <main>
+        <section>
+            <h1 class="hero-title">Косметологічна клініка</h1>
+            <img src="./images/logo.svg" alt="Beauty Salon Logo" width="529" height="228" />
+            <button class="button" type="button">Записатися на прийом</button>
+            <p>Запишись та отримай безкоштовну консультацію від нашого косметолога</p>
+        </section>
+        <section id="about-us-section">
+            <h2>Перевтілюйтесь в <span class="">beauty zone!</span></h2>
+            <p>Наша косметологічна клініка пропонує вам професійні послуги
+                з догляду за шкірою обличчя та тіла.</p>
+            <p>B <span class="">beauty zone</span> ми гарантуємо найвищі стандарти якості
+                та приємний сервіс. Наші косметологічні процедури та препарати допоможуть вам підтримувати свою красу та
+                молодість.
+                З нами краса назавжди!</p>
+            <img src="./images/lady-before.jpg" alt="Lady Before" />
+            <img src="./images/lady-after.jpg" alt="Lady After" />
+        </section>
+        <section id="why-us-section">
+            <h2>Чому люди <span>обирають нас</span></h2>
+            <ul>
+                <li>
+                    <article>
+                        <img src="./images/atom-logo.svg" alt="Atom icon" />
+                        <p>Всі наші косметологи мають вищу медичну освіту
+                            та стаж роботи від 5 років</p>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <img src="./images/cosmetics_logo.svg" alt="Cosmetics icon" />
+                        <p>Використовуємо тільки професійне обладнання та косметику, перевірену часом</p>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <img src="./images/crown-logo.svg" alt="Crown icon" />
+                        <p>Наша мета - підкреслити переваги та приховати недоліки, а не переробити</p>
+                    </article>
+                </li>
+            </ul>
+        </section>
+        <section id="services-section">
+            <h2>Наші процедури</h2>
+            <ul>
+                <li>
+                    <h3>Маски для обличчя</h3>
+                </li>
+                <li>
+                    <h3>Догляд за тілом</h3>
+                </li>
+                <li>
+                    <h3>Догляд за волоссям</h3>
+                </li>
+            </ul>
+        </section>
+        <section id="contacts-section">
+            <h2>Як нас знайти</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1798.7331380608605!2d30.489551558584196!3d50.3890609890983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c8c384542a8d%3A0x748c656298a31708!2z0JPRg9GA0YLQvtC20LjRgtC-0Log4oSWMTYg0JrQndCjINGW0LzQtdC90ZYg0KLQsNGA0LDRgdCwINCo0LXQstGH0LXQvdC60LA!5e0!3m2!1suk!2sua!4v1752750491410!5m2!1suk!2sua"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+    </main>
+    <footer>
+        <nav>
+            <ul>
+                <img src="./images/logo.svg" alt="Beauty Salon Logo" />
+                <li><a href="#about-us-section">Про нас</a></li>
+                <li><a href="#why-us-section">Чому ми</a></li>
+                <li><a href="#services-section">Наші процедури</a></li>
+                <li><a href="#contacts-section">Контакти</a></li>
+            </ul>
+        </nav>
+        <address>
+            <ul>
+                <li><a href="tel:+380960000007">+38(096)000 00 07</a></li>
+                <li><a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a></li>
+                <li><a href="https://g.co/kgs/PJswQ6B" target="_blank">Україна, м. Київ,
+                        вулиця Зої Бутенко, 6</a></li>
+                <li><a href="#"><img src="./images/phone-logo.svg" alt="Phone icon" /></a></li>
+                <li><a href="#"><img src="./images/facebook-logo.svg" alt="Facebook icon" /></a></li>
+                <li><a href="#"><img src="./images/instagram-logo.svg" alt="Instagram icon" /></a></li>
+            </ul>
+            <a href="#" target="_blank">Політика конфіденційності</a>
+            <p class="address-copyright">&copy; 2025 Дані захищені</p>
+        </address>
+    </footer>
 
 </body>
 
